--- a/css/global.css
+++ b/css/global.css
@@ -12,11 +12,12 @@ body{
     display: flex;
     align-items: center;
     margin-left: 135px;
+    height: 150px;
 }
 .header__menu {
     display: flex;
     gap: 30px;
-    margin-left: 600px;
+    margin-left: 510px;
 }
 .header__menu-item {
     list-style: none;
@@ -48,7 +49,7 @@ body{
 .footer__menu {
     display: flex;
     gap: 30px;
-    margin-left: 600px;
+    margin-left: 510px;
 }
 .footer__menu-item {
     list-style: none;
@@ -70,7 +71,7 @@ body{
 }
 .local__content {
     display: flex;
-    margin-left: 500px;
+    margin-left: 470px;
     gap: 30px;
 }
 .local__content a{
