--- a/css/global.css
+++ b/css/global.css
@@ -22,6 +22,9 @@ body{
 .header__menu-item {
     list-style: none;
 }
+.header__menu-item:hover{
+    color: blue;
+}
 .header__menu-item a{
     text-decoration: none;
     width: 50px;
@@ -54,6 +57,9 @@ body{
 .footer__menu-item {
     list-style: none;
 }
+.footer__menu-item:hover{
+    color: blue;
+}
 .footer__menu-item a{
     text-decoration: none;
     width: 50px;
@@ -68,6 +74,8 @@ body{
 .footer__content {
     font-weight: 700;
     height: 50px;
+    font-size: 20px;
+    margin-bottom: 5px;
 }
 .local__content {
     display: flex;
