--- a/css/foods.css
+++ b/css/foods.css
@@ -1,5 +1,3 @@
-.hero__container {
-}
 .hero-milliyfood {
     margin-left: 165px;
     flex-wrap: wrap;
@@ -30,4 +28,25 @@
     margin-left: 400px;
     margin-top: 100px;
     font-size: 35px;
+}
+/* section */
+.section-fastfood__container{
+    margin-top: 100px;
+    margin-left: 180px;
+}
+.section-fastfood-title{
+    font-size: 40px;
+    margin-left: 400px;
+    margin-bottom: 8                0px;
+}
+.fastfood-img{
+    width: 204px;
+    height: 192px;
+    border-radius: 10px;
+    margin-left: 40px;
+    margin-bottom: 20px;
+}
+.fastfood__img{
+    gap: 30px;
+    justify-content: space-evenly;
 }
