--- a/css/global.css
+++ b/css/global.css
@@ -12,8 +12,10 @@ body{
     display: flex;
     align-items: center;
     margin-left: 135px;
-    height: 150px;
+    height: 90px;
+    margin-top: 5px;
     margin-right: 100px;
+    backdrop-filter: 10px;
 }
 .header__menu {
     display: flex;
@@ -44,6 +46,7 @@ body{
 .footer__container {   
     margin-left: 135px;
     margin-top: 200px;
+    max-width: 1110px;
 }
 .footer-nav-logo{
     display: flex;
@@ -94,4 +97,43 @@ body{
 }
 .local__content a:hover{
     color: black;
+}
+
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;;
+    z-index: 999;
+    background-color: white;
+    backdrop-filter: blur(10px);
+    box-shadow:10px 0 10px rgba(0, 0, 0, 0.1);
+    display: none;
+    /* display: none; */
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.sidebar li{
+    width: 100%;
+}
+.sidebar a{
+    width: 100%;
+}
+.menu-button{
+    display: none;
+}
+@media(max-width:800px){
+    .hideOnMobile{
+        display: none;
+    }
+    .menu-button{
+        display: block;
+    }
+}
+@media(max-width:400){
+    .sidebar{
+        width: 100%;
+    }
 }
