--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,11 @@
     margin-top: 150px;
     margin-right: 165px;
 }
+.hero-span1{
+    color: black;
+    font-weight:bolder;
+    font-size: 30px;
+}
 
 
 /* filialarimiz */
